@@ -1,4 +1,4 @@
-.TH "G15Composer" "1" "3.0.1" "G15Tools - G15Composer" "G15Tools User Manual"
+.TH "G15Composer" "1" "3.1" "G15Tools - G15Composer" "G15Tools User Manual"
 .SH "NAME"
 g15composer \- Scriptable command interface to
 .BR libg15render (3)
@@ -21,6 +21,16 @@ G15composer understands the following options:
 .br
 Change effective UID to that of 
 .I username
+.P
+.HP
+\-g
+.I gid
+.br
+Change effective GID to 
+.I gid
+.P
+.HP
+\-r	Reuse /var/run/g15composer if another g15composer instance is listening there.
 .SH "BASIC USAGE"
 nohup ./g15composer /path/to/pipe &
 
